fixed spacing in footer for home page

--- a/responsive_style.css
+++ b/responsive_style.css
@@ -35,6 +35,10 @@
 }
 
 #unsplash {
+    font-size: 10px;
+}
+
+.footer{
     padding: 0;
 }
 /* styling for 'Submit' button  */
